# skia_OHOS

./: README.md  build-profile.json5  build.md
docs/: skia-render-call-chain.md
docs/reports/: adaptation-plan.md  deep-adaptation-progress.md  deep-analysis-report.md  phase4-feature-matrix.md  phase4-platform-boundary.md  phase4-validation-chain.md  phase5-candidate-modules.md
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/renderer/: render_log.h  renderer_state.h  skia_gpu_renderer.cpp  skia_gpu_renderer.h  skia_scene_renderer.cpp  skia_scene_renderer.h  xcomponent_bridge.cpp  xcomponent_bridge.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/interface/: XComponentContext.ts
entry/src/main/ets/pages/: Index.ets
skia/: BUILD.gn
skia/gn/: skia.gni
skia/include/ports/: SkFontMgr_ohos.h
skia/tools/: ohos_egl_smoke.cpp  ohos_text_smoke.cpp
